[gd_scene load_steps=4 format=3 uid="uid://c3g40vlt2ne32"]

[ext_resource type="Script" uid="uid://chwlfxhy87aae" path="res://lib/tracking/camera/openseeface/osf_debug.gd" id="1_a10jp"]
[ext_resource type="Script" uid="uid://crd8sp7fnpfdy" path="res://lib/tracking/camera/openseeface/osf_config.gd" id="1_l2brn"]

[sub_resource type="PlaceholderMesh" id="PlaceholderMesh_w8rkj"]

[node name="OsfConfig" type="VBoxContainer"]
size_flags_horizontal = 3
script = ExtResource("1_l2brn")

[node name="PointPreview" type="Panel" parent="."]
unique_name_in_owner = true
clip_contents = true
custom_minimum_size = Vector2(0, 256)
layout_mode = 2
script = ExtResource("1_a10jp")
mirror = true

[node name="FpsCounter" type="Label" parent="PointPreview"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
offset_left = 8.0
offset_top = 8.0
offset_right = 45.0
offset_bottom = 23.0
theme_type_variation = &"ValueLabel"
text = "FPS: 0"

[node name="FaceMesh" type="MeshInstance2D" parent="PointPreview"]
unique_name_in_owner = true
position = Vector2(216, 128)
scale = Vector2(128, 128)
mesh = SubResource("PlaceholderMesh_w8rkj")

[node name="ActiveIndicator" type="Label" parent="PointPreview"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -48.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 31.0
grow_horizontal = 0
theme_type_variation = &"ValueLabel"
text = "Off"
horizontal_alignment = 1

[node name="BlinkSync" type="CheckButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "Link Eye Blinking"

[node name="Label" type="Label" parent="."]
layout_mode = 2
text = "Camera"

[node name="Camera" type="OptionButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
text_overrun_behavior = 1
fit_to_longest_item = false

[node name="Label2" type="Label" parent="."]
layout_mode = 2
text = "Model"

[node name="Model" type="OptionButton" parent="."]
unique_name_in_owner = true
layout_mode = 2
text_overrun_behavior = 1
selected = 4
fit_to_longest_item = false
item_count = 5
popup/item_0/text = "1 - Low CPU, Inaccurate"
popup/item_0/id = 1
popup/item_1/text = "2 - Low CPU, Semi-accurate"
popup/item_1/id = 2
popup/item_2/text = "3 - Med CPU, Accurate"
popup/item_2/id = 3
popup/item_3/text = "4 - Med CPU, Wink Supported"
popup/item_3/id = 4
popup/item_4/text = "5 - High CPU, Most Accurate"
popup/item_4/id = 5

[node name="AutoConnect" type="CheckButton" parent="."]
visible = false
layout_mode = 2
text = "Auto Connect"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Connect" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Connect"

[node name="Disconnect" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Disconnect"

[connection signal="toggled" from="BlinkSync" to="." method="_on_blink_sync_toggled"]
[connection signal="pressed" from="HBoxContainer/Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="HBoxContainer/Disconnect" to="." method="_on_disconnect_pressed"]
